添加充电地图接口